--- a/config/app.ini
+++ b/config/app.ini
@@ -26,11 +26,9 @@ WriteTimeout = 60
 
 [database]
 Type = mongodb
-User = admin
-Password = admin
-Host = localhost:27017
-Name = quizzes
-TablePrefix = quiz_
+Host = mongodb://localhost:27017/?ssl=false
+
+DBName = quizzes
 
 [redis]
 Host = 127.0.0.1:6379
